@@ -1,3 +1,12 @@
+pippijn     2006/10/01 00:37:28 UTC	(20061001-6589)
+  Log:
+  fixed crashing bug that occurred when registering without being logged in
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/modules/chanserv/register.c (File Modified) 
+
+
 jilles      2006/09/30 22:35:46 UTC	(20060930-6587)
   Log:
   Add description field to testcmd_vtable. This is used for logging.
